# dummy2

./: README.md
ackermann_gazebo_plugin/: CMakeLists.txt  package.xml
ackermann_gazebo_plugin/src/: ackermann_gazebo_plugin.cpp  ackermann_gazebo_plugin.hpp
dummy2_gazebo/: CMakeLists.txt  package.xml
dummy2_gazebo/bt/: custom_bt.xml
dummy2_gazebo/config/: navigation.yaml  rviz2_config.rviz
dummy2_gazebo/launch/: bringup.launch.py  description.launch.py  spawn_world.launch.py
dummy2_gazebo/src/: exploration.cpp  exploration_node.cpp  exploration_node.hpp  initialpose_node.cpp  test.cpp  test2.cpp
dummy2_gazebo/urdf/: base.urdf.xacro
dummy2_gazebo/worlds/: dummy2_world.world  dummy2_world_edit.world  empty.world
dummy2_gazebo/worlds/simple_map/: my_map.pgm  my_map.yaml  my_map2.pgm  my_map2.yaml
dummy2_navi/: CMakeLists.txt  package.xml
dummy2_navi/config/: navigation.yaml
dummy2_navi/maps/: testmap1.pgm
test_gazebo/: CMakeLists.txt  package.xml
test_gazebo/launch/: description.launch.py
test_gazebo/urdf/: base.urdf.xacro
test_navi/: CMakeLists.txt  package.xml
test_navi/config/: navigation.yaml  slam.yaml
test_navi/launch/: navigation.launch.py  slam.launch.py
test_navi/maps/: testmap1.yaml
